adiona cards de projetos mobile

--- a/index.html
+++ b/index.html
@@ -47,8 +47,18 @@
 
     <div id="projetos">
         <h3>Projetos</h3>
-        <div>Card</div>
-        <div>Card</div>
+        <div id="cards">
+            <a href="https://github.com/alexianaa/login" class="card-projeto" >
+                <img class="imagem" src="../public/login.jpg" alt="">
+                <div>Login Responsivo</div>
+                <p>Tela de login que se adapta a três tipos de telas</p>
+            </a>
+            <a href="https://github.com/alexianaa/To-do" class="card-projeto" >
+                <img class="imagem" src="../public/todo.jpg" alt="">
+                <div>To Do List</div>
+                <p>Lista de afazeres feito com javascript com conexão mongodb</p>
+            </a>
+        </div>
     </div>
 
     <div id="habilidades" >
