adiciona habilidades e contato mobile

--- a/index.html
+++ b/index.html
@@ -63,10 +63,17 @@
 
     <div id="habilidades" >
         <h3>Habilidades</h3>
+        <div class="card-habilidades" > Javascript </div>
+        <div class="card-habilidades" > PHP </div>
+        <div class="card-habilidades" > C e C++ </div>
+        <div class="card-habilidades" > Python </div>
     </div>
 
     <div id="contato">
         <h3>Contato</h3>
+        <p>E-mail: alexiasilvacardosoo@gmail.com.br</p>
+        <p>Linkedin: Alexia Naara</p>
+        <p>Telefone: (82) 98849-4263</p>
     </div>
   
 </body>
